--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_dotenv: ^5.1.0
   # how the localisation works
   # https://docs.flutter.dev/development/accessibility-and-localization/internationalization#adding-your-own-localized-messages
   flutter_localizations:
@@ -47,7 +46,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
-    - .env
+    - env.json
     - fonts/clicker-script/
   # here you can add just new fonts if you want
   # keep in mind to add the license to the app, for all stuff it doesn't come from pub.dev
