--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,6 @@ environment:
   sdk: ">=2.19.0 <4.0.0"
 
 dependencies:
-  beamer: ^1.5.6
   cupertino_icons: ^1.0.2
   device_info_plus: ^9.0.2
   # drift to store the data persistence in locally db
@@ -24,6 +23,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.3.1
   formz: ^0.6.0
+  go_router: ^9.1.0
   intl: any
   logging: ^1.2.0
   package_info_plus: ^4.0.2
